# navigation_p3dx

devel/: .catkin
devel/lib/dwa_planner/: data_logger_node  dwa_planner  trajectory_visualizer_node
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/move_base_benchmark/: direct_goal_sender.py  fixed_goal.py  move_base_benchmark  simple_navigation_goals
devel/lib/pkgconfig/: dwa_planner.pc  gazebo_world.pc  (+6 more)
src/dwa_planner/: CMakeLists.txt  README.md  save_map.sh  start_dwa_navigation.sh
src/dwa_planner/config/: costmap_common_params.yaml  dwa_param.yaml  robot_param.yaml
src/dwa_planner/include/dwa_planner/: dwa_planner.h
src/dwa_planner/launch/: local_planner.launch  move_base_p3dx_dwa.launch  p3dx_dwa.rviz  p3dx_navigation.rviz  p3dx_navigation_with_map.launch
src/dwa_planner/logs/: dwa_nav_log_2025-07-23_16-25-00.txt  dwa_nav_log_2025-07-23_16-33-12.txt  dwa_nav_log_2025-07-23_16-33-48.txt  dwa_nav_log_2025-07-23_16-42-16.txt  dwa_nav_log_2025-07-23_16-49-07.txt  dwa_nav_log_2025-07-23_17-09-46.txt
src/dwa_planner/maps/corridor/: mymap.pgm
src/dwa_planner/params/: amcl_params.yaml  costmap_common_params.yaml  data_logger_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  trajectory_visualizer_params.yaml
src/dwa_planner/script/: check_topics.py  send_goal.py  tf_warning_suppressor.py
src/dwa_planner/src/: data_logger_node.cpp  dwa_planner.cpp  trajectory_visualizer_node_60s.cpp
src/multi_robot_scenario/: gazeboSetup.bash
(+43 files in other folders)
